# load_tester

./: Cargo.toml  IMPLEMENTATION.md  README.md  config.json  invoice_template.xml  medium_load_report.html  server_technial_doc.md  text.xml
.cargo/: config.toml
examples/: demo_payloads.rs
src/: constants.rs  dto.rs  generator.rs  main.rs  pre_enroll.rs  transactions.rs
