[package]
name = "load_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
goose = "0.18.1"
tokio = { version = "1.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
openssl = "0.10"
