[package]
name = "load_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
goose = "0.18.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
openssl = "0.10"
base64 = "0.22"
sha2 = "0.10"
x509-parser = "0.16"
quick-xml = "0.37"
hex = "0.4"
xml_c14n = "0.3"
reqwest = { version = "0.12", features = ["json"] }
gumdrop = "0.8"
